[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-ord = "0.3.2"
gfx = "0.18.2"
glam = "0.22.0"
hidapi = "2.1.2"
image = "0.24.5"
sdl2 = { version = "0.35.2", features = ["image"] }
tokio = { version = "1.25.0", features = ["full"] }
