[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
either = "1.8.1"
float-ord = "0.3.2"
#gfx = "0.18.2"
glam = "0.22.0"

itertools = "0.10.5"
rand = "0.8.5"
sdl2 = { version = "0.35.2" }
tokio = { version = "1.25.0", features = ["full"] }
